--- a/DA_Fertilization.Rmd
+++ b/DA_Fertilization.Rmd
@@ -1,10 +1,20 @@
 ---
-title: "Untitled"
-output: html_document
-date: "2024-07-10"
-editor_options: 
-  chunk_output_type: console
+title: "DA - fertilization"
+author: "MD"
+date: "'r format(Sys.time(), '%b %d, %Y')'"
+output: 
+ html_document:
+   toc: true
+   toc_float: true
+ editor_options:
+   chunck_output_type: console
+   chunk_output_type: console
 ---
+```{r}
+library(tidyverse)
+library(microbiomeMarker)
+library(phyloseq)
+```
 
 
 ```{r}
